<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".CreateProfile">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/msg_createPerfil"
                android:id="@+id/msg_createPerfil"
                android:gravity="center_horizontal"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:gravity="center">

            <Button
                android:layout_margin="5dp"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:text="@string/btn_diversity"
                android:id="@+id/btn_diversity"
                android:onClick="btnDiversity"/>

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_quiz"
                android:id="@+id/btn_quiz"
                android:onClick="btnQuiz"/>

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_worl"
                android:id="@+id/btn_worl"
                android:onClick="bntWorl"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:id="@+id/linearLayout3"
            android:gravity="center">

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_animals"
                android:id="@+id/btn_green"
                android:onClick="btnGreen"/>

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_movie"
                android:id="@+id/btn_movies"
                android:onClick="btnMovies"/>

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_inspiration"
                android:id="@+id/btn_inspiration"
                android:onClick="btnInspiration"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:id="@+id/linearLayout1">

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_culture"
                android:id="@+id/btn_culture"
                android:onClick="btnCuture"
                />

            <Button
                android:layout_margin="5dp"
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/btn_community"
                android:id="@+id/btn_community"
                android:onClick="btnCommunity"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:id="@+id/linearLayout4"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_health"
                android:id="@+id/btn_health"
                android:onClick="btnHealth" />

            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_colaboration"
                android:id="@+id/btn_colaboration"
                android:onClick="btnColaboration"/>

            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_relations"
                android:id="@+id/btn_relations"
                android:onClick="btnRelations"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:id="@+id/linearLayout5"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_family"
                android:id="@+id/btn_family"
                android:onClick="btnFamily"/>

            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/profile_creatividad"
                android:id="@+id/btn_creativity"
                android:onClick="btnCreativity"/>
            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_women"
                android:id="@+id/btn_women"
                android:onClick="btnWomen"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:id="@+id/linearLayout6"
            android:gravity="center">

            <Button
                style="@style/buttonStyle"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_styleLive"
                android:layout_margin="5dp"
                android:id="@+id/btn_styleLive"
                android:onClick="btnStyleLive"/>

            <Button
                style="@style/buttonStyle"
                android:layout_margin="5dp"
                android:background="@drawable/boton_normal"
                android:layout_height="40dp"
                android:layout_width="wrap_content"
                android:text="@string/btn_beauty"
                android:id="@+id/btn_beauty"
                android:onClick="btnBeauty"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:id="@+id/linearLayoutButton"
            android:enabled="false"
            android:visibility="invisible"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="70px"
                android:contentDescription="@string/profile_login"
                android:text="@string/profile_login"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_login"
                android:text="@string/profile_login"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />

            <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_login_button"
                android:layout_width="match_parent"
                android:layout_height="60px"
                android:contentDescription="@string/profile_login"
                android:text="@string/profile_login"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"/>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
