<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp"
            android:id="@+id/comeBackButton"
            android:contentDescription="@string/post_comeBack"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:text="@string/detalle_post"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/textView3"
            android:layout_weight="4"
            android:typeface="sans"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareFacebookButton"
            android:contentDescription="@string/share_facebook"
            android:layout_gravity="center"
            android:background="@drawable/tw__transparent"
            app:srcCompat="@drawable/facebook_app_logo"
            android:layout_weight="0.59" />

        <ImageButton
            android:contentDescription="@string/post_compartir"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_share_white_24dp"
            android:id="@+id/shareButton"
            android:layout_weight="1" />

        <ImageButton
            android:contentDescription="@string/post_bookmark"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bookmark_border_white_24dp"
            android:id="@+id/bookmarkButton"
            android:layout_weight="1" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainerPost"
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar_post"
        android:layout_marginBottom="1dp"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll_detail_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/cardtextColor"
                android:id="@+id/viewDetailLinear"
                tools:ignore="WebViewLayout">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/heigny_image_detail"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder"
                    android:id="@+id/imageViewDetail"
                    tools:ignore="ContentDescription"
                    android:contentDescription="" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailTextView"
                    android:text="@string/notification_title"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Small Text"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:id="@+id/detail" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@color/verde"
                    android:layout_marginBottom="15dp"/>

                <ProgressBar
                    android:id="@+id/progressBarPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleInverse"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/toolbar_post"
                    android:layout_gravity="center_horizontal" />


            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>